--- a/index.html
+++ b/index.html
@@ -7,41 +7,90 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fasthand&family=Orbitron:wght@400;500;600;700;800;900&family=Raleway&family=Varela+Round&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
+    <script src="script.js"></script>
   </head>
   <body>
+    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon shadow">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <p class="name-logo mb-0">Ruben Mota</p>
+        </a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item active">
+              <a class="nav-linked" href="#">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-linked" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-linked" href="#">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class="container">
-      <h1>Hello, I'm Ruben 🧩</h1>
+      <h1>About me</h1>
 
-      <img src="./images/unnamed.jpeg" alt="Profile Picture" id="profile-logo" class="img-circle">
+      <p>I am a dedicated and ambitious Junior Full-Stack Web Developer with a background in the Portuguese army.
+         Having served for six years, including three years representing Portugal in the NATO HQ and European Military
+          Committee based in Belgium, I have cultivated valuable qualities such as discipline, teamwork, and adaptability.</p>
+      <p>Seeking a fresh career path, I committed myself to the Le Wagon 9-week Web Development bootcamp, where I
+        acquired a solid foundation and practical experience in various web development technologies. I am proficient
+        in HTML, CSS, JavaScript, and frameworks like Ruby on Rails. Additionally, I have hands-on experience using
+        version control systems like GitHub and deploying web applications on platforms such as Heroku.</p>
+      <p>As a junior developer, I understand the importance of continuous learning and thrive in a supportive and
+        collaborative environment. I am passionate about problem-solving, creativity, and staying up-to-date with
+        the latest industry trends. Contributing to dynamic projects and expanding my expertise in web development excites me.</p>
+      <p>With a strong work ethic, attention to detail, and a willingness to learn, I am confident in my ability to
+        make positive contributions to any team. I am open to new opportunities and challenges that will allow
+        me to grow and enhance my skills as a Junior Full-Stack Web Developer.</p>
+    </div>
 
-      <h2>Programmer 💻</h2>
+    <div class="container">
+      <h1>Projects</h1>
 
-      <p>I'm 28 years old, I was born and raised in Portugal 🇵🇹,
-        I've been part of the Portuguese army
-        for the last 6 years 🪖 But now
-        it's time for a change in career.
-        That is where Le Wagon comes in, because
-        it was the school that I chose to help me on that important
-        change! 🚌📚🖥️ </p>
+      <h3><a href="https://astroride.herokuapp.com/" class="text-decoration-none text-success">AstroRide</a></h3>
 
-      <a href="https://discoverportugal.pt/en/" target="_blank" class="btn-orange">Discover Portugal</a>
+      <p>This collaborative endeavor involved a team of four individuals, focused on creating a
+        replica of Airbnb's distinctive features, but with a unique twist of renting out spaceships.
+        Within this project, users have the capability to both list their own spaceships for rent,
+        specifying available dates and prices, as well as rent spaceships from other users for specific dates.
+        As a Full-Stack developer, my responsibilities encompassed a diverse range of tasks,
+        including proficiency in Rails, Ruby, JavaScript, HTML, CSS, GitHub, and Heroku.
+      </p>
+
+      <br>
+
+      <h3><a href="https://www.moneycounter.pro/" class="text-decoration-none text-success">MoneyCounter </a></h3>
+      <p>A remarkable project completed by a team of four individuals for the culminating assignment of the esteemed Le Wagon Bootcamp,
+        this is a fully functional website designed to facilitate expense and income management on mobile devices.
+        The platform offers comprehensive categorization capabilities, allowing users to efficiently organize their financial transactions.
+        Moreover, it incorporates a captivating feature called Goals, enabling users to set and strive for specific financial objectives.
+        Additionally, the inclusion of a unique feature named Groups empowers users to share expenses with friends,
+        facilitating clear visibility into owed debts and outstanding amounts.
+        As a Full-Stack developer, my responsibilities encompassed a diverse range of tasks,
+        including proficiency in Rails, Ruby, JavaScript, HTML, CSS, GitHub, and Heroku.  </p>
+
     </div>
 
     <div class="card">
-      <h2>Follow me</h2>
-      <ul class="list-inline">
+      <h2 class="text-center">Contacts</h2>
+      <ul class="list-inline text-center">
         <li><a href="https://github.com/Rubenmota95" target="_blank">
-              <i class="fa-brands fa-square-github small-logos"></i>
+              <i class="fa-brands fa-square-github small-logos text-dark"></i>
             </a>
         </li>
         <li>
-          <a href="#" target="_blank">
-            <i class="fa-brands fa-linkedin small-logos"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <i class="fa-brands fa-medium small-logos"></i>
+          <a href="https://www.linkedin.com/in/ruben-mota-3025a7279/" target="_blank">
+            <i class="fa-brands fa-linkedin small-logos text-dark"></i>
           </a>
         </li>
       </ul>
