--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,72 +13,123 @@
     <link href="https://fonts.googleapis.com/css2?family=Fasthand&family=Orbitron:wght@400;500;600;700;800;900&family=Raleway&family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
-    <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon shadow">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <p class="name-logo mb-0">Ruben Mota</p>
-        </a>
+<!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong">
+      <!-- Container wrapper -->
+      <div class="container-fluid d-flex justify-content-between">
+        <!-- Navbar brand -->
+        <a class="navbar-brand" href="#">Ruben Mota</a>
+        <!-- Collapsible wrapper -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item active">
-              <a class="nav-linked" href="#">About Me</a>
+          <!-- Left links -->
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-linked" href="#">Projects</a>
+              <a class="nav-link" href="#">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-linked" href="#">Contacts</a>
+              <a class="nav-link" href="#">Contacts</a>
             </li>
+            <!-- Navbar dropdown -->
           </ul>
+          <!-- Left links -->
+        </div>
+        <!-- Collapsible wrapper -->
+      </div>
+      <!-- Container wrapper -->
+    </nav>
+    <!-- Navbar -->
+    <div class="container px-4">
+      <div class="row gx-5">
+        <div class="col-12 col-lg-7">
+          <div>
+            <h1 class="container-titles-about">About me</h1>
+          </div>
+          <div class="about-card">
+          <p>I am a dedicated and ambitious Junior Full-Stack Web Developer with a background in the Portuguese army.
+            Having served for six years, including three years representing Portugal in the NATO HQ and European Military
+              Committee based in Belgium, I have cultivated valuable qualities such as discipline, teamwork, and adaptability.</p>
+          <p>Seeking a fresh career path, I committed myself to the Le Wagon 9-week Web Development bootcamp, where I
+            acquired a solid foundation and practical experience in various web development technologies. I am proficient
+            in HTML, CSS, JavaScript, and frameworks like Ruby on Rails. Additionally, I have hands-on experience using
+            version control systems like GitHub and deploying web applications on platforms such as Heroku.</p>
+          <p>As a junior developer, I understand the importance of continuous learning and thrive in a supportive and
+            collaborative environment. I am passionate about problem-solving, creativity, and staying up-to-date with
+            the latest industry trends. Contributing to dynamic projects and expanding my expertise in web development excites me.</p>
+          <p>With a strong work ethic, attention to detail, and a willingness to learn, I am confident in my ability to
+            make positive contributions to any team. I am open to new opportunities and challenges that will allow
+            me to grow and enhance my skills as a Junior Full-Stack Web Developer.</p>
+          </div>
+        </div>
+        <div class="col-12 col-lg-5">
+          <img src="./images/unnamed.jpeg" alt="Personal Photo" class="profile-img">
         </div>
       </div>
     </div>
-    <div class="container">
-      <h1>About me</h1>
-
-      <p>I am a dedicated and ambitious Junior Full-Stack Web Developer with a background in the Portuguese army.
-         Having served for six years, including three years representing Portugal in the NATO HQ and European Military
-          Committee based in Belgium, I have cultivated valuable qualities such as discipline, teamwork, and adaptability.</p>
-      <p>Seeking a fresh career path, I committed myself to the Le Wagon 9-week Web Development bootcamp, where I
-        acquired a solid foundation and practical experience in various web development technologies. I am proficient
-        in HTML, CSS, JavaScript, and frameworks like Ruby on Rails. Additionally, I have hands-on experience using
-        version control systems like GitHub and deploying web applications on platforms such as Heroku.</p>
-      <p>As a junior developer, I understand the importance of continuous learning and thrive in a supportive and
-        collaborative environment. I am passionate about problem-solving, creativity, and staying up-to-date with
-        the latest industry trends. Contributing to dynamic projects and expanding my expertise in web development excites me.</p>
-      <p>With a strong work ethic, attention to detail, and a willingness to learn, I am confident in my ability to
-        make positive contributions to any team. I am open to new opportunities and challenges that will allow
-        me to grow and enhance my skills as a Junior Full-Stack Web Developer.</p>
+    <div class="container container-titles-projects">
+        <h1>My projects</h1>
     </div>
+    <div class="container px-4">
+      <div class="row gx-5">
+        <div class="col-12 col-lg-5">
+          <div>
+            <img src="./images/unnamed.jpeg" alt="Personal Photo">
+          </div>
+        </div>
+        <div class="col-12 col-lg-7">
+          <div class="about-card">
+            <h3><a href="https://astroride.herokuapp.com/" class="text-decoration-none projects">AstroRide</a></h3>
+            <p>
+              This collaborative endeavor involved a team of four individuals, focused on creating a
+              replica of Airbnb's distinctive features, but with a unique twist of renting out spaceships.
+            </p>
+            <p>
+              Within this project, users have the capability to both list their own spaceships for rent,
+              specifying available dates and prices, as well as rent spaceships from other users for specific dates.
+            </p>
+            <p>
+              As a Full-Stack developer, my responsibilities encompassed a diverse range of tasks,
+              including proficiency in Rails, Ruby, JavaScript, HTML, CSS, GitHub, and Heroku.
+            </p>
+          </div>
+        </div>
+      </div>
 
-    <div class="container">
-      <h1>Projects</h1>
+      <div class="container px-4" style="margin-top: 170px">
+        <div class="row gx-5">
+          <div class="col-12 col-lg-7">
+            <div class="about-card">
+              <h3><a href="https://www.moneycounter.pro/" class="text-decoration-none projects">MoneyCounter </a></h3>
+              <p>
+                A remarkable project completed by a team of four individuals for the culminating assignment of the esteemed Le Wagon Bootcamp,
+                this is a fully functional website designed to facilitate expense and income management on mobile devices.
+                The platform offers comprehensive categorization capabilities, allowing users to efficiently organize their financial transactions.
+              </p>
+              <p>
+                Moreover, it incorporates a captivating feature called Goals, enabling users to set and strive for specific financial objectives.
+                Additionally, the inclusion of a unique feature named Groups empowers users to share expenses with friends,
+                facilitating clear visibility into owed debts and outstanding amounts.
+              </p>
+              <p>
+                As a Full-Stack developer, my responsibilities encompassed a diverse range of tasks,
+                including proficiency in Rails, Ruby, JavaScript, HTML, CSS, GitHub, and Heroku.
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-lg-5">
+            <div>
+              <img src="./images/unnamed.jpeg" alt="Personal Photo">
+            </div>
+          </div>
+        </div>
 
-      <h3><a href="https://astroride.herokuapp.com/" class="text-decoration-none text-success">AstroRide</a></h3>
-
-      <p>This collaborative endeavor involved a team of four individuals, focused on creating a
-        replica of Airbnb's distinctive features, but with a unique twist of renting out spaceships.
-        Within this project, users have the capability to both list their own spaceships for rent,
-        specifying available dates and prices, as well as rent spaceships from other users for specific dates.
-        As a Full-Stack developer, my responsibilities encompassed a diverse range of tasks,
-        including proficiency in Rails, Ruby, JavaScript, HTML, CSS, GitHub, and Heroku.
-      </p>
-
-      <br>
-
-      <h3><a href="https://www.moneycounter.pro/" class="text-decoration-none text-success">MoneyCounter </a></h3>
-      <p>A remarkable project completed by a team of four individuals for the culminating assignment of the esteemed Le Wagon Bootcamp,
-        this is a fully functional website designed to facilitate expense and income management on mobile devices.
-        The platform offers comprehensive categorization capabilities, allowing users to efficiently organize their financial transactions.
-        Moreover, it incorporates a captivating feature called Goals, enabling users to set and strive for specific financial objectives.
-        Additionally, the inclusion of a unique feature named Groups empowers users to share expenses with friends,
-        facilitating clear visibility into owed debts and outstanding amounts.
-        As a Full-Stack developer, my responsibilities encompassed a diverse range of tasks,
-        including proficiency in Rails, Ruby, JavaScript, HTML, CSS, GitHub, and Heroku.  </p>
 
     </div>
 
@@ -89,7 +141,7 @@
             </a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/ruben-mota-3025a7279/" target="_blank">
+          <a href="https://www.linkedin.com/in/rubenmota95/" target="_blank">
             <i class="fa-brands fa-linkedin small-logos text-dark"></i>
           </a>
         </li>
