--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
     </div>
     <div class="container px-4">
       <div class="row gx-5">
-        <div class="col-12 col-lg-5">
+        <div class="col-12 col-lg-7">
           <div>
-            <img src="./images/unnamed.jpeg" alt="Personal Photo">
+            <img src="./images/Astroride.png" alt="Personal Photo" style="width: 600px">
           </div>
         </div>
-        <div class="col-12 col-lg-7">
+        <div class="col-12 col-lg-5">
           <div class="about-card">
-            <h3><a href="https://astroride.herokuapp.com/" class="text-decoration-none projects">AstroRide</a></h3>
+            <h3><a href="https://astroride.herokuapp.com/" class="text-decoration-none projects" target="_blank">AstroRide</a></h3>
             <p>
               This collaborative endeavor involved a team of four individuals, focused on creating a
               replica of Airbnb's distinctive features, but with a unique twist of renting out spaceships.
@@ -104,9 +104,9 @@
 
       <div class="container px-4" style="margin-top: 170px">
         <div class="row gx-5">
-          <div class="col-12 col-lg-7">
+          <div class="col-12 col-lg-8">
             <div class="about-card">
-              <h3><a href="https://www.moneycounter.pro/" class="text-decoration-none projects">MoneyCounter </a></h3>
+              <h3><a href="https://www.moneycounter.pro/" class="text-decoration-none projects" target="_blank">MoneyCounter </a></h3>
               <p>
                 A remarkable project completed by a team of four individuals for the culminating assignment of the esteemed Le Wagon Bootcamp,
                 this is a fully functional website designed to facilitate expense and income management on mobile devices.
@@ -123,29 +123,35 @@
               </p>
             </div>
           </div>
-          <div class="col-12 col-lg-5">
+          <div class="col-12 col-lg-4">
             <div>
-              <img src="./images/unnamed.jpeg" alt="Personal Photo">
+              <img src="./images/Moneycounter.png" alt="Personal Photo" style="height: 700px">
             </div>
           </div>
         </div>
 
 
     </div>
-
-    <div class="card">
-      <h2 class="text-center">Contacts</h2>
-      <ul class="list-inline text-center">
-        <li><a href="https://github.com/Rubenmota95" target="_blank">
-              <i class="fa-brands fa-square-github small-logos text-dark"></i>
-            </a>
-        </li>
-        <li>
+    <h1>
+      Contacts
+    </h1>
+    <div class="row">
+      <div class="col-12 col-lg-4">
+        <div class="about-card">
+          <p>
+            Send me an e-mail to <strong style="font-size: 23px">Rubenlisboa95@gmail.com</strong>
+          </p>
+          <p>
+            Follow me on my socials
+          </p>
+          <a href="https://github.com/Rubenmota95" target="_blank">
+            <i class="fa-brands fa-square-github small-logos text-dark"></i>
+          </a>
           <a href="https://www.linkedin.com/in/rubenmota95/" target="_blank">
             <i class="fa-brands fa-linkedin small-logos text-dark"></i>
           </a>
-        </li>
-      </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
