--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <!-- Container wrapper -->
       <div class="container-fluid d-flex justify-content-between">
         <!-- Navbar brand -->
-        <a class="navbar-brand" href="#">Ruben Mota</a>
+        <a class="navbar-brand" href="#" style="font-size: 23px">Ruben Mota</a>
         <!-- Collapsible wrapper -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <!-- Left links -->
