--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
               As a Full-Stack developer, my responsibilities encompassed a diverse range of tasks,
               including proficiency in Rails, Ruby, JavaScript, HTML, CSS, GitHub, and Heroku.
             </p>
+            <a href="https://astroride.herokuapp.com/" target="_blank" style="text-decoration: none">
+              <button class="btn-grad">Check Site</button>
+            </a>
           </div>
         </div>
       </div>
@@ -121,6 +124,11 @@
                 As a Full-Stack developer, my responsibilities encompassed a diverse range of tasks,
                 including proficiency in Rails, Ruby, JavaScript, HTML, CSS, GitHub, and Heroku.
               </p>
+              <div>
+                <a href="https://www.moneycounter.pro/" target="_blank" style="text-decoration: none">
+                  <button class="btn-grad">Check Site</button>
+                </a>
+              </div>
             </div>
           </div>
           <div class="col-12 col-lg-4">
