--- a/index.html
+++ b/index.html
@@ -25,35 +25,26 @@
   </head>
   <body>
     <div class="banner shadow-lg">
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong shadow" style="position: sticky; top: 0; width: 100%;">
-  <!-- Container wrapper -->
-  <div class="container-fluid d-flex justify-content-between">
-    <!-- Navbar brand -->
-    <a class="navbar-brand" href="#" style="font-size: 23px"><img src="./images/unnamed.jpeg" alt="profile photo" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 15px;">RUBEN MOTA</a>
-    <!-- Collapsible wrapper -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-    </div>
-    <!-- Collapsible wrapper -->
-
-    <!-- Right-aligned links -->
-    <ul class="navbar-nav ml-auto">
-      <!-- Add your right-aligned li elements here -->
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="#">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contacts</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+      <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong shadow" style="position: sticky; top: 0; width: 100%;">
+        <div class="container-fluid d-flex justify-content-between">
+          <a class="navbar-brand" href="#" style="font-size: 23px"><img src="./images/unnamed.jpeg" alt="profile photo" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 15px; box-shadow: 2px 2px 4px black;">Ruben Mota</a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          </div>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#about-me">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects-me">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contacts-me">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     <div>
-      <h1 class="text-center justify-content-center banner-title">HI, I'M RUBEN MOTA</h1>
+      <h1 class="text-center justify-content-center banner-title">Hi, I'm Ruben Mota</h1>
       <p class="text-center mt-3" style="color: rgb(223, 223, 223)">A focused Junior Full-Stack Web Developer who builds <br>Websites and Web Applications.</p>
     </div>
     <div class="d-flex justify-content-center mt-5 mb-3">
@@ -70,6 +61,7 @@
   </div>
   <div class="about-section">
     <div class="container container-titles-projects mt-5 mb-5">
+        <a id="about-me"></a>
         <h3 class="text-center">ABOUT ME</h1>
         <div class="small-bar text-center"></div>
         <p class="text-center">Learn more information about me and my skills in programming</p>
@@ -132,6 +124,7 @@
 
     <div class="project-section">
       <div class="container container-titles-projects mt-5 mb-5">
+          <a id="projects-me"></a>
           <h3 class="text-center">MY PROJECTS</h1>
           <div class="small-bar text-center"></div>
           <p class="text-center">Have a look on all the projects I've completed so far</p>
@@ -187,6 +180,7 @@
     </div>
     <div class="contact-section">
       <div class="container container-titles-projects mt-5 mb-5">
+          <a id="contacts-me"></a>
           <h3 class="text-center">CONTACTS</h1>
           <div class="small-bar text-center"></div>
           <p class="text-center">If you have any doubts or want to discuss a job opportunity, feel free to fill the form.</p>
