--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="row gx-5">
         <div class="col-12 col-lg-7">
           <div>
-            <h2 class="mb-3">Know me!</h2>
+            <h2 class="mb-3">A bit about me</h2>
             <p>I am a dedicated and ambitious Junior Full-Stack Web Developer, I thrive in a supportive and
               collaborative environment, and my goal is always to improve the success of any kind of business. You can check my own <strong>Projects</strong></p>
             <p>I also understand the importance of continuous learning I am passionate about problem-solving, creativity, and staying up-to-date with
