added another achor link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p class="text-center mt-3" style="color: rgb(223, 223, 223)">A focused Junior Full-Stack Web Developer who builds <br>Websites and Web Applications.</p>
     </div>
     <div class="d-flex justify-content-center mt-5 mb-3">
-      <button class="btn-projects">MY PROJECTS</button>
+      <a href="#projects-me"><button class="btn-projects">MY PROJECTS</button></a>
     </div>
     <div class="d-flex justify-content-center mt-5 links">
       <a href="https://github.com/Rubenmota95" target="_blank">
