--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>
       </nav>
     <div>
-      <h1 class="text-center justify-content-center banner-title">Hi, I'm Ruben Mota</h1>
-      <p class="text-center mt-3" style="color: rgb(223, 223, 223)">A focused Junior Full-Stack Web Developer who builds <br>Websites and Web Applications.</p>
+      <h1 class="text-center justify-content-center banner-title" style="text-shadow: 2px 2px 10px black;">Hi, I'm Ruben Mota</h1>
+      <p class="text-center mt-3" style="color: rgb(223, 223, 223); text-shadow: 1px 1px 5px black;">A focused Junior Full-Stack Web Developer who builds <br>Websites and Web Applications.</p>
     </div>
     <div class="d-flex justify-content-center mt-5 mb-3">
       <a href="#projects-me"><button class="btn-projects">MY PROJECTS</button></a>
