changed main buttons

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 facilitating clear visibility into owed debts and outstanding amounts.
               </p>
               <a href="www.moneycounter.pro" target="_blank">
-                <button class="btn-projects" style="margin-top: 15px;">Check Website</button>
+                <button class="btn-projects" style="margin-top: 15px;">Website</button>
               </a>
             </div>
           </div>
@@ -172,7 +172,7 @@
               as well as rent spaceships from other users for specific dates.
             </p>
             <a href="www.moneycounter.pro" target="_blank">
-              <button class="btn-projects" style="margin-top: 15px;">Check Website</button>
+              <button class="btn-projects" style="margin-top: 15px;">Website</button>
             </a>
           </div>
         </div>
