--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       </nav>
     <div>
       <h1 class="text-center justify-content-center banner-title" style="text-shadow: 2px 2px 10px black;">Hi, I'm Ruben Mota</h1>
-      <p class="text-center mt-3" style="color: rgb(223, 223, 223); text-shadow: 1px 1px 5px black;">A focused Junior Full-Stack Web Developer who builds <br>Websites and Web Applications.</p>
+      <p class="text-center mt-3" style="color: rgb(223, 223, 223); text-shadow: 1px 1px 5px black;">A Full-Stack Web Developer focused on building <br>Websites and Web Applications.</p>
     </div>
     <div class="d-flex justify-content-center mt-5 mb-3">
-      <a href="#projects-me"><button class="btn-projects">MY PROJECTS</button></a>
+      <a href="#projects-me"><button class="btn-projects">PROJECTS</button></a>
     </div>
     <div class="d-flex justify-content-center mt-5 links">
       <a href="https://github.com/Rubenmota95" target="_blank">
@@ -144,7 +144,7 @@
                 facilitating clear visibility into owed debts and outstanding amounts.
               </p>
               <a href="www.moneycounter.pro" target="_blank">
-                <button class="btn-projects" style="margin-top: 15px;">Website</button>
+                <button class="btn-projects-link" style="margin-top: 15px;">Website</button>
               </a>
             </div>
           </div>
@@ -172,7 +172,7 @@
               as well as rent spaceships from other users for specific dates.
             </p>
             <a href="www.moneycounter.pro" target="_blank">
-              <button class="btn-projects" style="margin-top: 15px;">Website</button>
+              <button class="btn-projects-link" style="margin-top: 15px;">Website</button>
             </a>
           </div>
         </div>
@@ -223,7 +223,7 @@
                         </div>
                     </div>
                     <div class="text-center text-md-left">
-                      <input type="submit" value="Send" class="btn-projects" style="margin-top: 15px; color: white; padding: 10px 30px">
+                      <input type="submit" value="Send" class="btn-projects-send" style="margin-top: 15px; color: white;">
                   </div>
                 </form>
                 <div class="status"></div>
