--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 Additionally, it has a unique feature designed for <strong>Groups</strong> empowers users to share expenses with friends,
                 facilitating clear visibility into owed debts and outstanding amounts.
               </p>
-              <a href="www.moneycounter.pro" target="_blank">
+              <a href="https://www.moneycounter.pro" target="_blank">
                 <button class="btn-projects-link" style="margin-top: 15px;">Website</button>
               </a>
             </div>
