changed website links

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               specifying available <strong>Dates</strong> and <strong>Prices</strong>,
               as well as rent spaceships from other users for specific dates.
             </p>
-            <a href="www.moneycounter.pro" target="_blank">
+            <a href="https://astrorider-b639720011a2.herokuapp.com/" target="_blank">
               <button class="btn-projects-link" style="margin-top: 15px;">Website</button>
             </a>
           </div>
