added the justify text

--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
         <div class="col-12 col-lg-7">
           <div>
             <h2 class="mb-3">A bit about me</h2>
-            <p>I am a dedicated and ambitious Junior Full-Stack Web Developer, I thrive in a supportive and
-              collaborative environment, and my goal is always to improve the success of any kind of business. You can check my own <strong>Projects</strong></p>
-            <p>I also understand the importance of continuous learning I am passionate about problem-solving, creativity, and staying up-to-date with
-              the latest industry trends.</p>
-            <p>This being said, I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my <strong>Skills</strong> and experience then don't hesitate to <strong>Contact me</strong></p>
+            <div class="justify">
+              <p>I am a dedicated and ambitious Junior Full-Stack Web Developer, I thrive in a supportive and
+                collaborative environment, and my goal is always to improve the success of any kind of business. You can check my own <strong>Projects</strong></p>
+              <p>I also understand the importance of continuous learning I am passionate about problem-solving, creativity, and staying up-to-date with
+                the latest industry trends.</p>
+              <p>This being said, I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my <strong>Skills</strong> and experience then don't hesitate to <strong>Contact me</strong></p>
+            </div>
           </div>
         </div>
         <div class="col-12 col-lg-5">
@@ -134,15 +136,17 @@
           <div class="col-12 col-lg-7">
             <div>
               <h2 class="mb-3">MoneyCounter</h2>
-              <p>
-                A remarkable project, designed to facilitate expense and income management on mobile devices.
-                The platform offers comprehensive categorization capabilities, allowing users to efficiently organize their financial <strong>Transactions</strong>.
-              </p>
-              <p>
-                Moreover, it incorporates a captivating feature called <strong>Goals</strong>, enabling users to set and strive for specific financial objectives.
-                Additionally, it has a unique feature designed for <strong>Groups</strong> empowers users to share expenses with friends,
-                facilitating clear visibility into owed debts and outstanding amounts.
-              </p>
+              <div class="justify">
+                <p>
+                  A remarkable project, designed to facilitate expense and income management on mobile devices.
+                  The platform offers comprehensive categorization capabilities, allowing users to efficiently organize their financial <strong>Transactions</strong>.
+                </p>
+                <p>
+                  Moreover, it incorporates a captivating feature called <strong>Goals</strong>, enabling users to set and strive for specific financial objectives.
+                  Additionally, it has a unique feature designed for <strong>Groups</strong> empowers users to share expenses with friends,
+                  facilitating clear visibility into owed debts and outstanding amounts.
+                </p>
+              </div>
               <a href="https://www.moneycounter.pro" target="_blank">
                 <button class="btn-projects-link" style="margin-top: 15px;">Website</button>
               </a>
@@ -162,18 +166,20 @@
           </div>
           <div class="col-12 col-lg-5">
             <h2 class="mb-3">Astroride</h2>
-            <p>
-              This project was focused on creating a replica of <strong>Airbnb's</strong> distinctive features,
-              but with a unique twist of renting out spaceships.
-            </p>
-            <p>
-              Within this project, the user have the capability to both list their own spaceships for rent,
-              specifying available <strong>Dates</strong> and <strong>Prices</strong>,
-              as well as rent spaceships from other users for specific dates.
-            </p>
-            <a href="https://astrorider-b639720011a2.herokuapp.com/" target="_blank">
-              <button class="btn-projects-link" style="margin-top: 15px;">Website</button>
-            </a>
+            <div class="justify">
+              <p>
+                This project was focused on creating a replica of <strong>Airbnb's</strong> distinctive features,
+                but with a unique twist of renting out spaceships.
+              </p>
+              <p>
+                Within this project, the user have the capability to both list their own spaceships for rent,
+                specifying available <strong>Dates</strong> and <strong>Prices</strong>,
+                as well as rent spaceships from other users for specific dates.
+              </p>
+              <a href="https://astrorider-b639720011a2.herokuapp.com/" target="_blank">
+                <button class="btn-projects-link" style="margin-top: 15px;">Website</button>
+              </a>
+            </div>
           </div>
         </div>
       </div>
