--- a/index.html
+++ b/index.html
@@ -24,41 +24,41 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="banner shadow-lg">
-      <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong shadow" style="position: sticky; top: 0; width: 100%;">
-        <div class="container-fluid d-flex justify-content-between">
-          <a class="navbar-brand" href="#" style="font-size: 23px"><img src="./images/unnamed.jpeg" alt="profile photo" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 15px; box-shadow: 2px 2px 4px black;">Ruben Mota</a>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          </div>
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#about-me">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects-me">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contacts-me">Contacts</a>
-            </li>
-          </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong shadow" style="position: sticky; top: 0; width: 100%; margin-bottom: 0">
+      <div class="container-fluid d-flex justify-content-between">
+        <a class="navbar-brand" href="#" style="font-size: 23px"><img src="./images/unnamed.jpeg" alt="profile photo" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 15px; box-shadow: 2px 2px 4px black;">Ruben Mota</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
         </div>
-      </nav>
-    <div>
-      <h1 class="text-center justify-content-center banner-title" style="text-shadow: 2px 2px 10px black;">Hi, I'm Ruben Mota</h1>
-      <p class="text-center mt-3" style="color: rgb(223, 223, 223); text-shadow: 1px 1px 5px black;">A Full-Stack Web Developer focused on building <br>Websites and Web Applications.</p>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#about-me">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects-me">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contacts-me">Contacts</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="banner shadow-lg" style="margin-top: 0">
+      <div>
+        <h1 class="text-center justify-content-center banner-title" style="text-shadow: 2px 2px 10px black;">Hi, I'm Ruben Mota</h1>
+        <p class="text-center mt-3" style="color: rgb(223, 223, 223); text-shadow: 1px 1px 5px black;">A Full-Stack Web Developer focused on building <br>Websites and Web Applications.</p>
+      </div>
+      <div class="d-flex justify-content-center mt-5 mb-3">
+        <a href="#projects-me"><button class="btn-projects">PROJECTS</button></a>
+      </div>
+      <div class="d-flex justify-content-center mt-5 links">
+        <a href="https://github.com/Rubenmota95" target="_blank">
+          <i class="fa-brands fa-square-github small-logos"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/rubenmota95/" target="_blank">
+          <i class="fa-brands fa-linkedin small-logos"></i>
+        </a>
+      </div>
     </div>
-    <div class="d-flex justify-content-center mt-5 mb-3">
-      <a href="#projects-me"><button class="btn-projects">PROJECTS</button></a>
-    </div>
-    <div class="d-flex justify-content-center mt-5 links">
-      <a href="https://github.com/Rubenmota95" target="_blank">
-        <i class="fa-brands fa-square-github small-logos"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/rubenmota95/" target="_blank">
-        <i class="fa-brands fa-linkedin small-logos"></i>
-      </a>
-    </div>
-  </div>
   <div class="about-section">
     <div class="container container-titles-projects mt-5 mb-5">
         <a id="about-me"></a>
